--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = git://github.com/mono/ngit.git
 [submodule "main/external/mdtestharness"]
 	path = main/external/mdtestharness
-	url = git://github.com/alanmcgovern/mdtestharness.git
+	url = git://github.com/mono/mdtestharness.git
 [submodule "main/external/xwt"]
 	path = main/external/xwt
 	url = git://github.com/mono/xwt.git
