--- a/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
+++ b/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Mono.TextEditor\Gui\TextEditor.cs" />
     <Compile Include="Mono.TextEditor\TextLineMarker.cs" />
     <Compile Include="Mono.TextEditor\TextSegmentMarker.cs" />
+    <Compile Include="Mono.TextEditor\Gui\FoldMarkerMargin.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Mono.TextEditor.dll.config">
