--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1789,6 +1789,7 @@
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageListButton.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageButtonBar.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageBarButton.cs" />
+    <Compile Include="MonoDevelop.Components\Tweener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
