[UIRefresh] Added stock icons for missing modifiers.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1066,6 +1066,12 @@
     <EmbeddedResource Include="icons\locale_16x16.png">
       <LogicalName>locale_16x16.png</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="icons\visibility-InternalAndProtected-16.png">
+      <LogicalName>visibility-InternalAndProtected-16.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\visibility-ProtectedOrInternal-16.png">
+      <LogicalName>visibility-ProtectedOrInternal-16.png</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MonoDevelop.Ide.Commands\CustomStringTagProvider.cs" />
