[UIRefresh] Implemented navigate to command tags/Fixed 'Bug 7059 - On clicking 'Search' menu, the following options: 'Go to File', 'Go to Type' and 'Navigate TO' are not appearing.'.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1794,6 +1794,7 @@
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageBarButton.cs" />
     <Compile Include="MonoDevelop.Components\Tweener.cs" />
     <Compile Include="MonoDevelop.Components\MouseTracker.cs" />
+    <Compile Include="MonoDevelop.Components.MainToolbar\SearchPopupSearchPattern.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
