--- a/main/tests/UnitTests/UnitTests.csproj
+++ b/main/tests/UnitTests/UnitTests.csproj
@@ -279,6 +279,7 @@
     <Compile Include="MonoDevelop.Projects\FileServiceTests.cs" />
     <Compile Include="MonoDevelop.Projects\SolutionFolderTests.cs" />
     <Compile Include="MonoDevelop.Core\BacktrackingStringMatcherTests.cs" />
+    <Compile Include="MonoDevelop.Ide.Gui\SearchPopupWindowTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\md.targets" />
