[UIRefresh] Continue refactor of Popover rendering into theme class. Move PopoverWindowTheme to its own file.
The point of this work is to further abstract the rendering of a popover
window from its layout and sizing logic. This will allow for greater
flexibility in its rendering and enable techniques such as caching
intermediate surfaces to be implemented by subclasses.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1795,6 +1795,7 @@
     <Compile Include="MonoDevelop.Components\Tweener.cs" />
     <Compile Include="MonoDevelop.Components\MouseTracker.cs" />
     <Compile Include="MonoDevelop.Components.MainToolbar\SearchPopupSearchPattern.cs" />
+    <Compile Include="MonoDevelop.Components\PopoverWindowTheme.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
