[UIRefresh] Implement YoutubeFeed for welcome page and hook it up to Xamarin Seminars.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1796,6 +1796,7 @@
     <Compile Include="MonoDevelop.Components\MouseTracker.cs" />
     <Compile Include="MonoDevelop.Components.MainToolbar\SearchPopupSearchPattern.cs" />
     <Compile Include="MonoDevelop.Components\PopoverWindowTheme.cs" />
+    <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageYoutubeFeed.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
