[Ide] Add the ability to pre-process references before adding/removing them
This API allows us to pre-process the modifications to a projects References that
the EditReferencesDialog would apply so we can prevent certain references from
being added if we wish.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1797,6 +1797,7 @@
     <Compile Include="MonoDevelop.Components.MainToolbar\SearchPopupSearchPattern.cs" />
     <Compile Include="MonoDevelop.Components\PopoverWindowTheme.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageYoutubeFeed.cs" />
+    <Compile Include="MonoDevelop.Ide\EditReferencesEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
