[Makefiles] Add run-sgen targets that run MD with SGen enabled.

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -114,8 +114,13 @@ MD_LAUNCH=$(MD_LAUNCH_SETUP) UBUNTU_MENUPROXY=0 exec -a "monodevelop" $(RUNTIME)
 
 run: runmd
 
+run-sgen: runmd-sgen
+
 runmd: $(PROGRAM)
 	$(MD_LAUNCH) --debug $(MD_BIN_PATH)/MonoDevelop.exe --no-redirect
+
+runmd-sgen: $(PROGRAM)
+	$(MD_LAUNCH) --gc=sgen --debug $(MD_BIN_PATH)/MonoDevelop.exe --no-redirect
 
 run-debug: $(PROGRAM)
 	MONODEVELOP_CONSOLE_LOG_LEVEL=All $(MD_LAUNCH) --debug=casts $(MD_BIN_PATH)/MonoDevelop.exe --no-redirect
