[UIRefresh] Move rendering code for StatusArea into its own class to separate rendering logic from animation logic.
This change is a step along the path to enabling three things
1) Decoupling animation logic from drawing logic, enabling easier
porting onto other toolkits (Xwt, Cocoa, OpenGL, whatever)
2) Enabling caching of intermediate render results, speeding up render
speeds dramatically
3) Enabling theming of the status area.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1798,6 +1798,7 @@
     <Compile Include="MonoDevelop.Components\PopoverWindowTheme.cs" />
     <Compile Include="MonoDevelop.Ide.WelcomePage\WelcomePageYoutubeFeed.cs" />
     <Compile Include="MonoDevelop.Ide\EditReferencesEventArgs.cs" />
+    <Compile Include="MonoDevelop.Components.MainToolbar\StatusAreaTheme.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
