--- a/main/src/addins/MonoDevelop.WebReferences/MonoDevelop.WebReferences.csproj
+++ b/main/src/addins/MonoDevelop.WebReferences/MonoDevelop.WebReferences.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Core" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\core\MonoDevelop.Core\MonoDevelop.Core.csproj">
@@ -111,6 +112,8 @@
     <Compile Include="MonoDevelop.WebReferences\WebReferencesService.cs" />
     <Compile Include="MonoDevelop.WebReferences.WCF\WCFMetadata.cs" />
     <Compile Include="MonoDevelop.WebReferences.WCF\WCFMetadataStorage.cs" />
+    <Compile Include="MonoDevelop.WebReferences.Dialogs\ConfigurationDialog.cs" />
+    <Compile Include="gtk-gui\MonoDevelop.WebReferences.Dialogs.ConfigurationDialog.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MonoDevelop.WebReferences.addin.xml">
