Fixed 'Bug 7803 - Highlighting in .ashx '.

--- a/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
+++ b/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
@@ -320,6 +320,9 @@
     <EmbeddedResource Include="SyntaxModes\FSharpSyntaxMode.xml">
       <LogicalName>FSharpSyntaxMode.xml</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="SyntaxModes\AspNetAshxSyntaxMode.xml">
+      <LogicalName>AspNetAshxSyntaxMode.xml</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
