[TextEditor] TextEditor now supports Html clipboard targets beside RTF. Now colored cut & paste works in more applications. (I had problems with my e-mail client thunderbird that didn't acceppt RTF - but Html).

--- a/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
+++ b/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Mono.TextEditor\Gui\TextArea.cs" />
     <Compile Include="Mono.TextEditor\Gui\TextEditor.cs" />
     <Compile Include="Mono.TextEditor\Standalone\StringTextSource.cs" />
+    <Compile Include="Mono.TextEditor.Utils\HtmlWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Mono.TextEditor.dll.config">
