--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "main/external/nrefactory"]
 	path = main/external/nrefactory
 	url = git://github.com/icsharpcode/NRefactory.git
+[submodule "main/external/mono-addins"]
+	path = main/external/mono-addins
+	url = git://github.com/mono/mono-addins.git
