--- a/main/src/core/MonoDevelop.Startup/MonoDevelop.Startup.csproj
+++ b/main/src/core/MonoDevelop.Startup/MonoDevelop.Startup.csproj
@@ -82,6 +82,10 @@
       <Name>Mono.Addins</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\external\mono-addins\Mono.Addins.CecilReflector\Mono.Addins.CecilReflector.csproj">
+      <Project>{42D1CE65-A14B-4218-B787-58AD7AA68513}</Project>
+      <Name>Mono.Addins.CecilReflector</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
